# routes/user.js
@@ -28,12 +28,13 @@ router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
-    await user_utils.markAsFavorite(user_id,recipe_id);
+    await user_utils.markAsFavorite(user_id, recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
     } catch(error){
     next(error);
   }
 })
+
 
 /**
  * This path returns the favorites recipes that were saved by the logged-in user
@@ -41,11 +42,8 @@ router.post('/favorites', async (req,res,next) => {
 router.get('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    let favorite_recipes = {};
-    const recipes_id = await user_utils.getFavoriteRecipes(user_id);
-    let recipes_id_array = [];
-    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    const recipes_ids = await user_utils.getFavoriteRecipes(user_id);
+    const results = await recipe_utils.getRecipesPreview(recipes_ids);
     res.status(200).send(results);
   } catch(error){
     next(error); 
@@ -53,6 +51,93 @@ router.get('/favorites', async (req,res,next) => {
 });
 
 
+/**
+ * This path gets body with recipeId and save this recipe in the lastWatched list of the logged-in user
+ */
+router.post('/lastWatched', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipe_id = req.body.recipeId;
+    await user_utils.addToLastWatched(user_id, recipe_id);
+    res.status(200).send("The Recipe successfully added to last watched");
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path returns the lastWatched recipes that were saved by the logged-in user
+ */
+router.get('/lastWatched', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const lastWatched = await user_utils.getLastWatched(user_id);
+    const results = await recipe_utils.getRecipesPreview(lastWatched);
+    res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path gets body with recipeId and save this recipe in the myRecipes list of the logged-in user
+ */
+router.post('/myRecipes', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const recipe_id = req.body.recipeId;
+    await user_utils.addToMyRecepies(user_id, recipe_id);
+    res.status(200).send("The Recipe successfully added to my recipes");
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path returns the myRecipes recipes that were saved by the logged-in user
+ */
+router.get('/myRecipes', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const myRecipes = await user_utils.getMyRecepies(user_id);
+    const results = await recipe_utils.getRecipesPreview(myRecipes);
+    res.status(200).send(results);
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path updates the search limit for the logged-in user
+ */
+ router.put('/searchLimit', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const searchLimit = req.body.searchLimit;
+    await user_utils.updateSerachLimit(user_id, searchLimit);
+    res.status(200).send("Search limit successfully updated");
+  } catch (error) {
+    next(error);
+  }
+});
+
+
+/**
+ * This path returns the search limit of the logged-in user
+ */
+ router.get('/searchLimit', async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    const searchLimit = await user_utils.getSearchLimit(user_id);
+    res.status(200).json({ searchLimit });
+  } catch (error) {
+    next(error);
+  }
+});
 
 
 module.exports = router;
